feat: import Visio and draw.io diagrams
